# fig

./: BUILD.gn  Gooey.jucer  fig  fig.jucer  gooey
JuceLibraryCode/: AppConfig.h  JuceHeader.h
Source/: App.cpp  CustomCppTokenizer.h  CustomFileBrowser.cpp  CustomFileBrowser.h  EditorLookAndFeel.h  FindAndReplaceComponent.cpp  FindAndReplaceComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponentCommands.cpp  MainWindow.cpp  MainWindow.h  MenuModels.h
