
# Copyright 2017 Greg Simon

import("//magma/gnbuild/magma.gni")
import("//build/toolchain/shared.gni")
import("//packages/package.gni")

executable("gooey") {
  include_dirs = [ 
    ".", 
    "Source" ,
    "JuceLibraryCode",

    # TODO : change this to a JUCE dependency or
    # just include the files in the project.
    "/home/greg/JUCE/modules"
  ]

  defines = [ 
    "FUCHSIA", 
    "JUCE_64BIT",
    "JUCE_APP_VERSION=1.0.0",
    "DEBUG=1",
    "JUCE_APP_VERSION_HEX=0x10000",
    "JucePlugin_Build_VST=0",
    "JucePlugin_Build_VST3=0",
    "JucePlugin_Build_AU=0",
    "JucePlugin_Build_AUv3=0",
    "JucePlugin_Build_RTAS=0",
    "JucePlugin_Build_AAX=0",
    "JucePlugin_Build_Standalone=0",

  ]

  sources = [
    "Source/App.cpp",
    "Source/FindAndReplaceComponent.cpp",
    "Source/MainComponentCommands.cpp",
    "Source/MainComponent.cpp",
    "Source/MainWindow.cpp",

    "JuceLibraryCode/BinaryData.cpp",
    "JuceLibraryCode/include_juce_core.cpp",
    "JuceLibraryCode/include_juce_data_structures.cpp",
    "JuceLibraryCode/include_juce_events.cpp",
    "JuceLibraryCode/include_juce_graphics.cpp",
    "JuceLibraryCode/include_juce_gui_basics.cpp",
    "JuceLibraryCode/include_juce_gui_extra.cpp"

  ]

  configs -= [ "//build/config:no_exceptions" ]
  configs -= [ "//build/config:no_rtti" ]

  # cflags_c += [ "-std=c++11" ]

  deps = [
  ]

}